# sys_monitoring

./: .gitignore  README.md  config.json  export_log.py  install.ps1  install.sh  log_pi_status.py  pyproject.toml  requirements.txt  sysmon.py  sysmon_lib.py  tg_bot_loop.py
