[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sys-monitoring"
version = "1.0.0"
description = "Linux/Windows system monitor with SQLite storage and an interactive Telegram bot."
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "psutil>=5.9",
    "requests>=2.31",
]

[project.scripts]
sysmon = "sysmon:main"

[tool.setuptools]
py-modules = ["sysmon", "sysmon_lib", "log_pi_status", "tg_bot_loop"]
